ChangeLog for KNotes
====================

2001/06/05  Michael Brade <brade@informatik.uni-muenchen.de>

    * started to port KNotes to the XMLGUI framework (50% done)
    * dropped KSystemTray inheritance

2001/05/19  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed the session management bug (#22844)
    * added two more icons to the context menu
    * fixed the undo/redo: no more undo right after startup possible
    * improved the code for saving the notes a lot, saved a little
      memory by removing a now unneeded variable

2001/05/06  Michael Brade <brade@informatik.uni-muenchen.de>

    * made the notes look 3d
    * added a small border to the text
    * change the color of the title to show the focus state

2001/04/25  Michael Brade <brade@informatik.uni-muenchen.de>

    Updated this file! It's time now, after one and a half years...

2001/04/25  Michael Brade <brade@informatik.uni-muenchen.de>

    Fixed the DCOP interface, no overloaded methods anymore.

2001/03/29  Nikolas Zimmermann <wildfox@kde.org>

    converted to KPrinter

2001/03/29  Michael Brade <brade@informatik.uni-muenchen.de>

    Focus updates. Fix for BR2333, it's time now ;-)

    GUI: Esc closes the current note, Shift-Tab cycles through the notes.
         TODO: make this configureable

2001/03/25  Michael Brade <brade@informatik.uni-muenchen.de>

    * Some internal redesign
    * the notes are now saved on FocusOutEvent to reduce the possibility
      of data loss (Bug#19851)
    * restructured the menu
    * most important: rewrote and extended the DCOP interface. KNotes now
      provides methods to work fine with PDA sync utils, ATM that's KPilot.
      The number of apps that can sync with KNotes is not limited.

2001/02/04  Michael Brade <brade@informatik.uni-muenchen.de>

    The fix for the broken config files. Enabled the "Stays On Top" option
    as well.

2001/01/18  Matthias Kiefer <matthias.kiefer@gmx.de>

    desktop names are encoded in utf8
